using NB.Service.Dto;
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace NB.Service.WarehouseService.Dto
{
    public class WarehouseSearch : SearchBase
    {
        public string WarehouseName { get; set; }
    }
}
